<resources>
    <string name="app_name">OjaExpress Merchant</string>
    <string name="toolbar_title">Stores</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_login">Sign in</string>

    <!-- NAVIGATION -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_title_home">Home</string>
    <string name="nav_title_stores">Stores</string>
    <string name="nav_title_logout">Logout</string>
    <string name="nav_title_orders">Orders</string>
    <string name="nav_title_products">Products</string>
    <string name="nav_title_settings">Settings</string>

    <!-- SLIDES -->
    <string name="slide_1_title">Oja Express</string>
    <string name="slide_1_desc">Welcome to OjaExpress Merchant Application</string>
    <string name="slide_2_title">Manage  Your Store</string>
    <string name="slide_2_desc">Easily Manage Your Stores On Ojaexpress</string>
    <string name="slide_3_title">Get Comfortable</string>
    <string name="slide_3_desc">Stress Free store management</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> Ojaexpress -> clear data</string>
    <string name="play_again">Play Again</string>

    <!-- ACTIONS-->
    <string name="action_settings">Settings</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_start">Start</string>
    <string name="action_next">NEXT</string>
    <string name="action_skip">SKIP</string>
    <string name="action_got_it">GOT IT</string>
    <string name="action_create_store">Create Store</string>
    <string name="action_save">Save</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="action_reset_password">Reset Password</string>
    <string name="action_already_registered">Already have an account? Login</string>
    <string name="action_continue">Continue</string>
    <string name="action_logout">Logout</string>


    <!-- MESSAGES -->
    <string name="default_username">Test Tester</string>
    <string name="default_email">test@tester.com</string>
    <string name="default_store_name">OjaExpress</string>
    <string name="default_product_name">Ground Pepper</string>
    <string name="default_price">$4.99 / lb</string>
    <string name="default_stock">in stock</string>
    <string name="default_sold">Sold</string>
    <string name="default_view">Product Views</string>
    <string name="default_click">Product Clicks</string>
    <string name="default_search">Search Appearance</string>
    <string name="default_restock">Minimum For Restock</string>
    <string name="default_category">Category</string>
    <string name="default_unit_of_measure">lb</string>
    <string name="default_order_id">12323</string>
    <string name="default_datetime">2018–05–05 05:05:00</string>
    <string name="order_id_prefix">Order ID: </string>
    <string name="order_price_prefix">Price: </string>
    <string name="order_total_price_prefix">Total Price: </string>
    <string name="order_status_prefix">Order Status: </string>
    <string name="default_status">Fresh</string>
    <string name="search_hint">Search</string>


    <!-- INPUTS PROMPTS & HINTS -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_store_name">Store Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_gender">Gender</string>
    <string name="prompt_current_password">Current Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="prompt_choose_password">Choose a Password</string>
    <string name="prompt_zip_code">Enter Zip Code</string>
    <string name="prompt_search">Search Items</string>
    <string name="prompt_address">Address</string>
    <string name="prompt_phone_number">Phone Number</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_password_empty">This password is empty</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>


    <!-- Strings related to login -->
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->


    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>


    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="app_version">1.0</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://ojaexpress.com</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.ojaexpress.com/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.ojaexpress/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>


    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="pref_store_sync_frequency">Store Sync frequency</string>
    <string name="pref_product_sync_frequency">Product Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>1 minutes</item>
        <item>3 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">Sync settings</string>
    <string name="pref_title_vibrate">Vibrate</string>

    <string name="pref_header_general">General</string>
    <string name="pref_header_data_sync">Network &amp; Sync</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>

    <!--Sorting-->

    <string name="sort_status">Sort by Status</string>
    <string name="sort_date">Sort by Date</string>
    <string name="sort_cost">Sort by Cost</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

</resources>
