<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/cart"
            android:title="@string/nav_title_home" />
        <item
            android:id="@+id/nav_stores"
            android:icon="@drawable/storeicon"
            android:title="@string/nav_title_stores" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/product"
            android:title="@string/nav_title_products" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
