<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:orientation="horizontal"
    android:layout_marginTop="@dimen/vertical_spacing"
    app:cardCornerRadius="2dp"
    app:cardBackgroundColor="@color/bg_screen1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fillAfter="false"
            android:fillEnabled="false"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/product_image_view"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:src="@drawable/avatar"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/product_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:text="@string/default_product_name"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <TextView
                android:id="@+id/product_price_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/thin"
                android:text="@string/default_price"/>



            <TextView
                android:id="@+id/product_number_in_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/timestamp"
                android:textStyle="bold"
                android:text="@string/default_stock"/>
            <TextView
                android:id="@+id/product_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@color/colorGreen"
                android:textSize="@dimen/timestamp"
                android:textStyle="bold"
                android:text="@string/default_category"/>

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
