<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:orientation="horizontal"
    android:layout_marginTop="@dimen/vertical_spacing"
    app:cardCornerRadius="2dp"
    app:cardBackgroundColor="@color/colorgrey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin"
        android:baselineAligned="false">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fillAfter="false"
            android:fillEnabled="false"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/order_store_avatar_image_view"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:src="@drawable/avatar"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bold"
                    android:text="@string/order_id_prefix"
                    android:layout_marginRight="@dimen/activity_vertical_margin"/>

                <TextView
                    android:id="@+id/order_id_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/thin"
                    android:text="@string/default_order_id"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal">
            <TextView
                android:id="@+id/order_price_prefix_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:text="@string/order_total_price_prefix"
               />
            <TextView
                android:id="@+id/order_net_cost_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_price"
                />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/order_time"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:src="@drawable/time" />

                <com.github.curioustechizen.ago.RelativeTimeTextView
                    android:id="@+id/order_datetime_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/order_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>


            </LinearLayout>



        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>
